added the token in documentation
